testsuite/tests/th/T12561.stderr

T12561.hs:7:20: error:
    • The exact Name ‘x’ is not in scope
        Probable cause: you used a unique Template Haskell name (NameU), 
        perhaps via newName, but did not bind it
        If that's it, then -ddump-splices might be useful
    • In the result of the splice:
        $t2
      To see what the splice expanded to, use -ddump-splices
      In the Template Haskell splice $$(t2)
      In the second argument of ‘(+)’, namely ‘$$(t2)’

T12561.hs:7:20: error:
    • GHC internal error: ‘x’ is not in scope during type checking, but it passed the renamer
      tcl_env of environment: [r3ej :-> Identifier[main::t1, TopLevelLet {} False]]
    • In the expression: x
      In the result of the splice:
        $t2
      To see what the splice expanded to, use -ddump-splices
      In the Template Haskell splice $$(t2)
